<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calian_gnss_ros2</name>
  <version>1.0.0</version>
  <description>ROS 2 driver for Calian Smart GNSS antennas</description>
  <maintainer email="gnss.sales@calian.com">Calian GNSS</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>calian_gnss_ros2_msg</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
